# VIDIOF

./: CMakeLists.txt  README.md  VideoFilter.def
.github/workflows/: build.yml
SRC/: VideoFilter.cpp
